--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
     <title>Awesome Book</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+   <div class="content">
     <header>
       <h1>Awesome Books</h1>
     </header>
@@ -24,8 +31,9 @@
       </label>
       <br />
       <br />
-      <button class="btn-submit" type="submit">Add</button>
+      <button class="btn btn-info btn-submit" type="submit">Add</button>
     </form>
+   </div>
 
     <script src="app.js"></script>
   </body>
