--- a/index.html
+++ b/index.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
-  />
-    <title>Awesome Book</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-   <div class="content">
-    <header>
-      <h1>Awesome Books</h1>
-    </header>
-    <div class="book"></div>
-
-    <form>
-      <label for="title">
-        <input id="title" name="title" placeholder="Title" type="text" />
-      </label>
-      <br />
-      <br />
-      <label for="author">
-        <input id="author" name="author" placeholder="Author" type="text" />
-      </label>
-      <br />
-      <br />
-      <button class="btn btn-info btn-submit" type="submit">Add</button>
-    </form>
-   </div>
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AWESOME-BOOKS</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="Books">
+        <div class="container">
+            <h1 class="title">All awesome books</h1>
+            <table class="booksList" id="list"></table>
+            <hr class="tablehr">
+            <h2 class="title">Add a new book</h2>
+            <form class="inputs">
+                <input type="text" id="title" placeholder="title" name="title" required/>
+                <br>
+                <br>
+                <input type="text" id="Author" placeholder="Author" name="Author" required/>
+                <br>
+                <br>
+                <button class="add" type="button">Add</button>
+            </form>
+        </div>
+    </div>
+    
     <script src="app.js"></script>
-  </body>
+</body>
 </html>
