--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AWESOME-BOOKS</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
 </head>
 <body>
     <div class="Books">
         <div class="container">
             <h1 class="title">All awesome books</h1>
-            <table class="booksList" id="list"></table>
+            <table class="table table-striped booksList" id="list"></table>
             <hr class="tablehr">
             <h2 class="title">Add a new book</h2>
             <form class="inputs">
                 <input type="text" id="title" placeholder="title" name="title" required/>
-                <br>
-                <br>
+                
                 <input type="text" id="Author" placeholder="Author" name="Author" required/>
-                <br>
-                <br>
-                <button class="add" type="button">Add</button>
+                
+                <button class="btn btn-info add" type="button">Add</button>
             </form>
         </div>
     </div>
